# mesh_smooth_for_finite_elements

./: .gitignore  CMakeLists.txt  main.cpp
algorithm/: CMakeLists.txt  MeshSmooth.cpp  MeshSmooth.h  common.cpp  common.h
algorithm/energy/: quality_metric.cpp  quality_metric.h
common/: CMakeLists.txt  common_utils.cpp  common_utils.h  dijkstra_path.cpp  dijkstra_path.h  eigen_utils.cpp  eigen_utils.h  math_utils.cpp  math_utils.h  string_utils.cpp  string_utils.h  surface_mesh_utils.cpp  surface_mesh_utils.h  timer.h  types.cpp  types.h  util.cpp  util.h
io/: CMakeLists.txt  data_shared_path.h  io.cpp  io.h  parse_config_file.cpp  parse_config_file.h  vtk.h  vtk_reader.cpp  vtk_reader.h  vtk_utils.cpp  vtk_utils.h
test/: CMakeLists.txt  common_test.cpp  mesh_smooth_test.cpp  quality_metric_test.cpp  test_utils.h
